@@ -95,6 +95,7 @@ Unreleased Version 2.2.3-pre
  * Fix: Correct warning about Firefox on Linux not supporting pressure sensitivity, since it does work on some systems. Thanks Kuuuube for reporting.
  * Feature: Add pressure tester to browser startup page. Thanks Shivani for contributing.
  * Feature: Add language selector to browser startup page.
+ * Feature: Add a brush setting to disallow others in a session to use it. This does not prevent them from replicating the brush in other ways, but this setting is there if you feel strongly about not making it easy. Thanks Blozzom for suggesting.
 
 2025-03-26 Version 2.2.2
  * Fix: Make annotations not cause glitches when moving them around when using the software renderer. Thanks Meru for reporting.
